<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@drawable/homewall2"
    android:fillViewport="false"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="About Us" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:text="CEO: Priyanshu Tripathi
                          Since 2019..." />
        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="23sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="Idead behind this" />
        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="cursive"
            android:layout_marginTop="10dp"
            android:text="@string/para1" />
        <TextView
            android:id="@+id/textV1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:text="Room Control" />
        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:fontFamily="cursive"
            android:layout_marginTop="10dp"
            android:text="@string/para2" />
        <TextView
            android:id="@+id/textV2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:text="Exclusive Discounts" />
        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:fontFamily="cursive"
            android:layout_marginTop="10dp"
            android:text="@string/para3" />
        <TextView
            android:id="@+id/textV2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:text="Interactive City Map" />
        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:fontFamily="cursive"
            android:layout_marginTop="10dp"
            android:text="@string/para4" />
        <TextView
            android:id="@+id/textVq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:text="In-Activities" />
        <TextView
            android:id="@+id/textVieww"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:fontFamily="cursive"
            android:layout_marginTop="10dp"
            android:text="@string/para5" />
    </LinearLayout>
</ScrollView>